# stremthru

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.example.yaml  config.go  go.mod  go.sum  heavy.Dockerfile  main.go  release-please-config.json  schema.go  schema.hcl  schema.postgres.hcl  schema_heavy.go  schema_none.go
.github/workflows/: ci-sdk-js.yml  ci-sdk-py.yml  ci.yml  docker-build-push.yml  release.yml
core/: base64.go  cache.go  error.go  http.go  request_ip.go  secret.go  util.go
internal/anidb/: log.go  title.db.go  title_dataset.go  torrent.db.go  tvdb_episode_map.db.go
internal/anilist/: anilist.go  const.go  db.go  db_sync.go  log.go
internal/anime/: id_map.db.go  log.go
internal/animeapi/: client.go  dataset.go  log.go
internal/animelists/: anime-list.override.xml  dataset.go  dataset_test.go  log.go
internal/anizip/: anizip.go  pool.go
internal/buddy/: auth.go  buddy.go  error.go  response.go  store.go  store_cache.go  torrent.go
internal/cache/: cache.go  lru.go  redis.go
internal/config/: config.go  config_test.go  http.go  http_test.go  integration.go  stremio.go
internal/context/: request.go
internal/db/: db.go  magnet_cache.go  (+2 more)
scripts/: generate-store-video.sh  schema.sh  text-to-video.sh
sdk/py/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.py
sdk/py/stremthru/: __init__.py  client.py  error.py  version.py
store/: error.go  store.go
stremio/: api.go  content_types.go  manifest.go  meta.go  stream.go  subtitle.go  types.go
(+374 files in other folders)
